--- a/productos.css
+++ b/productos.css
@@ -189,12 +189,13 @@
 
 .price-inputs input {
     flex: 1;
-    padding: 0.5rem;
+    padding: 0.5rem 0.4rem !important;
     border: 1px solid var(--light-gray);
     border-radius: 6px;
-    font-size: 0.85rem;
+    font-size: 0.8rem !important;
     width: 0;
     min-width: 0;
+    max-width: 100px;
 }
 
 .apply-filter-btn {
